<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/loading_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="5dp" >

        <Button
            android:id="@+id/settings_start_bt"
            style="@style/MenuButton"
            android:text="@string/start" />

        <Button
            android:id="@+id/settings_back_music_bt"
            style="@style/MenuButton"
            android:layout_marginTop="5dp"
            android:text="@string/back_music" />

        <Button
            android:id="@+id/settings_game_music_bt"
            style="@style/MenuButton"
            android:layout_marginTop="5dp"
            android:text="@string/game_music" />

        <Button
            android:id="@+id/settings_QQ_bt"
            style="@style/MenuButton"
            android:layout_marginTop="5dp"
            android:text="@string/test_qq_login" />

        <Button
            android:id="@+id/settings_about_me_bt"
            style="@style/MenuButton"
            android:layout_marginTop="5dp"
            android:text="@string/about_me" />
    </LinearLayout>

</LinearLayout>