<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:scrollbars="none" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffeeeeee"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="matrix"
                android:src="@drawable/likebamboo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="170dp"
                    android:paddingRight="10dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1.0"
                        android:gravity="right"
                        android:text="@string/my_name"
                        android:textColor="#FF00FF00"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="#ffffff"
                        android:padding="4dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:contentDescription="@string/about_me"
                            android:scaleType="fitXY"
                            android:src="@drawable/me" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="7"
                        android:gravity="right"
                        android:text="@string/signature"
                        android:textColor="#ff666666" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#ffffffff"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/qq" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="3"
                            android:text="@string/qq_value"
                            android:textColor="#ff666666" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#ffcccccc" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/weibo" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="3"
                            android:text="@string/weibo_value"
                            android:textColor="#ff666666" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#ffcccccc" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/weixin" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="3"
                            android:text="@string/weixin_value"
                            android:textColor="#ff666666" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#ffcccccc" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/email" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="3"
                            android:linksClickable="true"
                            android:text="@string/email_value"
                            android:textColor="#ff666666" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</LinearLayout>