<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/game_over_dialog_msg_bt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/game_over"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/game_over_dialog_restart_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/paly_again"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/game_over_dialog_stop_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>