<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffeeeeee"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <com.likebamboo.widget.VScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:scrollbars="none" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/qq_login_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <Button
                    android:id="@+id/qq_login_bt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:text="@string/qq_login" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/qq_loading_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/qq_loading_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_name" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/qq_user_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/qq_user_info_qz_iv"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="matrix"
                    android:src="@drawable/likebamboo" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="170dp"
                        android:paddingLeft="10dp" >

                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="#ffffff"
                            android:padding="4dp" >

                            <ImageView
                                android:id="@+id/qq_user_info_qq_iv"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:contentDescription="@string/about_me"
                                android:scaleType="fitXY"
                                android:src="@drawable/me" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/qq_user_name_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1.0"
                            android:text="@string/my_name"
                            android:textColor="#FF00FF00"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:gravity="left"
                            android:text="@string/signature"
                            android:textColor="#ff666666" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="3" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:orientation="vertical" >

                        <com.likebamboo.widget.roundbt.RoundTableView
                            android:id="@+id/qq_user_info_round_table"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
    </com.likebamboo.widget.VScrollView>

</LinearLayout>